--- a/assignment no.3
+++ b/assignment no.3
@@ -7,6 +7,8 @@
 	display the output starting that they are sides of right
 	angled triangle or not
 	ASSIGNMENT no :- 3
+        assigned roll no:-
+	assigned by :-
 	*/
 	#include <stdio.h>
 
